ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: default
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: hello
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: project-rest-service
            port:
              number: 80
